--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -22,6 +22,7 @@ vitam:
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
         jvm_log: false
+	performance_logger: "false"
     library:
         vitam_component: library
         host: "library.service.{{consul_domain}}"
@@ -35,6 +36,7 @@ vitam:
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
         jvm_log: false
+	performance_logger: "false"
 
 
 # Period units in seconds
