Bug 5795 : Force override non empty cartridges

--- a/vitam-conf-dev/conf/offer/offer-tape.conf
+++ b/vitam-conf-dev/conf/offer/offer-tape.conf
@@ -4,6 +4,10 @@ outputTarStorageFolder: "/vitam/data/offer/outputTars"
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
 
+# Enable overriding non empty cartridges
+# WARNING : FOR DEV/TEST ONLY. DO NOT ENABLE IN PRODUCTION.
+forceOverrideNonEmptyCartridges: true
+
 topology:
   fileBuckets:
     metadata: ['unit', 'objectGroup']
