--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -207,6 +207,7 @@ vitam:
         https_enabled: true
         secret_platform: "false"
         antivirus: "clamav"
+        # timeout used since antivirus operation. Value should be evaluated depending on the number of simultanuous scan to do and of the size of binaries
         timeoutScanDelay: 60000
         # Directory where files should be placed for local ingest
         upload_dir: "/vitam/data/ingest-external/upload"
