--- a/deployment/environments/hosts.example
+++ b/deployment/environments/hosts.example
@@ -361,5 +361,6 @@ vitam_tests_gitrepo_url=
 vitam_reverse_external_dns=
 # For reverse proxy use
 reverse_proxy_port=443
+vitam_reverse_external_protocol=https
 # http_proxy env var to use ; has to be declared even if empty
 http_proxy_environnement=
