Bug 5808 : Fix random tests
(cherry picked from commit d3551107cae19ef5d9a8dc47a6ffb71be017ff78)

--- a/sources/ingest/ingest-external/ingest-external-rest/pom.xml
+++ b/sources/ingest/ingest-external/ingest-external-rest/pom.xml
@@ -80,7 +80,13 @@
             <artifactId>common-dsl-schema</artifactId>
             <version>${project.version}</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>common-public-client</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
