--- a/deployment/ansible-vitam/roles/checks/tasks/check_offers.yml
+++ b/deployment/ansible-vitam/roles/checks/tasks/check_offers.yml
@@ -1,5 +1,15 @@
 ---
 
 - name: Check if defined offer is present in vitam_offers
-  fail: msg="Unsupported or badly configured offer as {{ offer_conf }} is not declared in vitam_offers  "
+  fail: msg="Unsupported or badly configured offer as {{ offer_conf }} is not declared in vitam_offers"
   when: offer_conf is defined and offer_conf not in vitam_offers
+
+- name: Compute the present offers in strategy
+  set_fact:
+    offers_strategy_list: "{{ offers_strategy_list + [item.name] }}"
+  loop: "{{ vitam_strategy }}"
+
+- name: Check if defined offer is present in vitam_strategy
+  fail: msg="Unsupported or badly configured offer as {{ offer_conf }} is not declared in vitam_strategy"
+  when: offer_conf is defined and offer_conf not in offers_strategy_list
+  
