Fixes avec CEA REX

--- a/deployment/environments/group_vars/all/vault-keystores.example
+++ b/deployment/environments/group_vars/all/vault-keystores.example
@@ -10,10 +10,12 @@ keystores:
     gatling: change_it_2sBC5ac7NfGF9Qj7
     ihm_recette: change_it_dAZ9Eq65UhDZd9p4
     reverse: change_it_e5XTzb5yVPcEX464
+    vitam_admin_int: change_it_z6xZe5gDu7nhDZd9
   client_storage:
     storage: change_it_647D7LWiyM6qYMnm
   timestamping:
     secure_logbook: change_it_Mn9Skuyx87VYU62U
+    secure_storage: change_it_e5gDu9Skuy84BLW9
 truststores:
   server: change_it_xNe4JLfn528PVHj7
   client_external: change_it_J2eS93DcPH1v4jAp
