Fixed vitam_status playbook on secondary site

--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -254,7 +254,7 @@ vitam:
         performance_logger: "false"
         reconstruction:
     ihm_demo:
-        vitam_component: "ihm-demo"
+        vitam_component: ihm-demo
         host: "ihm-demo.service.{{ consul_domain }}"
         port_service: 8446
         port_admin: 28002
