--- a/sources/storage/storage-engine/storage-engine-client/pom.xml
+++ b/sources/storage/storage-engine/storage-engine-client/pom.xml
@@ -73,7 +73,11 @@
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-	</dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
