--- a/deployment/ansible-vitam-extra/roles/ihm-recette-clone-tests/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/ihm-recette-clone-tests/tasks/main.yml
@@ -1,10 +1,4 @@
 ---
-
-- name: Make sure curl is installed
-  package:
-    name: curl
-    state: latest
-
 # tasks file for clone-tests
 - block:
   - name: get repo for git lfs for CentOS
@@ -18,6 +12,12 @@
   when: ansible_os_family == "RedHat"
 
 - block:
+
+  - name: Make sure curl is installed to download GPG key
+    package:
+      name: curl
+      state: latest
+
   - name: get repo for git lfs for Debian
     copy:
       src: gitlfs-debian8.list
