Manual cherry-pick MR6153 on R10

--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -156,7 +156,7 @@
         <org.glassfish.web.version>2.2.6</org.glassfish.web.version>
         <javax.el-api.version>3.0.0</javax.el-api.version>
         <retrofit2.version>2.5.0</retrofit2.version>
-        <rpm.version>2.1.5</rpm.version>
+        <maven.rpm-maven-plugin.version>2.1.5</maven.rpm-maven-plugin.version>
 
         <nodeDownloadRoot/>
     </properties>
@@ -748,7 +748,7 @@
                     <!-- RPM packaging -->
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>rpm-maven-plugin</artifactId>
-                    <version>${rpm.version}</version>
+                    <version>${maven.rpm-maven-plugin.version}</version>
                     <configuration>
                         <name>vitam-${unix.name}</name>
                         <disabled>true</disabled>
