--- a/deployment/ansible-vitam/roles/kibana_dashboards/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/kibana_dashboards/tasks/main.yml
@@ -20,7 +20,7 @@
     method: GET
     #status_code: 200,302
   register: kibana_result
-  until: kibana_result.status != 503
+  until: kibana_result.status == 200 
   retries: "{{ composant.api_call_timeout }}"
   delay: 1
   tags: load_kibana
