--- a/sources/common/common-private/pom.xml
+++ b/sources/common/common-private/pom.xml
@@ -174,6 +174,11 @@
 			<artifactId>json-unit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>metrics-elasticsearch-reporter</artifactId>
+			<version>${metrics.elastic.version}</version>
+		</dependency>
     </dependencies>
 
 	<build>
