Use elasticsearch-metrics-reporter-java with ES6 compatibility

--- a/sources/common/common-private/pom.xml
+++ b/sources/common/common-private/pom.xml
@@ -189,10 +189,6 @@
             <artifactId>metrics-jvm</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>metrics-elasticsearch-reporter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
         </dependency>
@@ -204,6 +200,11 @@
             <groupId>net.javacrumbs.json-unit</groupId>
             <artifactId>json-unit</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>metrics-elasticsearch-reporter</artifactId>
+            <version>${metrics.elastic.version}</version>
         </dependency>
     </dependencies>
 
