--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -112,7 +112,7 @@
         <elasticsearch.client.transport.version>${elasticsearch.version}</elasticsearch.client.transport.version>
         <mongo.version>3.4.2</mongo.version>
         <apache-shiro.version>1.3.2</apache-shiro.version>
-        <jetty.version>9.4.6.v20170531</jetty.version>
+        <jetty.version>9.4.18.v20190429</jetty.version>
         <assertj.version>3.8.0</assertj.version>
         <rest-assured.version>2.9.0</rest-assured.version>
         <junit.version>4.12</junit.version>
@@ -363,8 +363,8 @@
                         <!-- Non Parallel mode -->
                         <parallel>classes</parallel>
                         <threadCount>1</threadCount>
-                        <perCoreThreadCount>true</perCoreThreadCount>
-                        <forkCount>2C</forkCount>
+                        <perCoreThreadCount>false</perCoreThreadCount>
+                        <forkCount>1.5C</forkCount>
                         <reuseForks>false</reuseForks>
                         <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
@@ -1140,6 +1140,10 @@
                     <exclusion>
                         <artifactId>commons-fileupload</artifactId>
                         <groupId>commons-fileupload</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>commons-beanutils-core</artifactId>
+                        <groupId>commons-beanutils</groupId>
                     </exclusion>
                 </exclusions>
             </dependency>
