--- a/sources/workspace/workspace-client/pom.xml
+++ b/sources/workspace/workspace-client/pom.xml
@@ -46,5 +46,10 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+    </dependencies>
 </project>
