--- a/vitam-conf-dev/conf/processing/processing.conf
+++ b/vitam-conf-dev/conf/processing/processing.conf
@@ -3,3 +3,5 @@ urlWorkspace: http://workspace.service.consul:8201/
 jettyConfig: jetty-config.xml
 workflowRefreshPeriod: 1
 processingCleanerPeriod: 1
+maxDistributionInMemoryBufferSize: 100000
+maxDistributionOnDiskBufferSize: 100000000
