--- a/vitam-conf-dev/conf/ihm-recette/tnr.conf
+++ b/vitam-conf-dev/conf/ihm-recette/tnr.conf
@@ -1,3 +1,5 @@
 urlWorkspace: http://workspace.service.consul:8201/
 tenantsTest:  [ "0" ]
 vitamSecret : vitamsecret
+tenants :  [ "0", "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
+adminTenant : 1
