Bug 5858 - Remove dependency cucumber-html - Exclude xstream from cucumber-jvm-deps and set a newest version of xstream - Upgrade jclouds filesystem and core to 2.1.2

--- a/sources/functional-test/pom.xml
+++ b/sources/functional-test/pom.xml
@@ -40,6 +40,22 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>1.2.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>info.cukes</groupId>
+                    <artifactId>cucumber-html</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.thoughtworks.xstream</groupId>
+                    <artifactId>xstream</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.11.1</version>
         </dependency>
 
         <dependency>
