--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -96,9 +96,8 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <resteasy.client.version>3.6.2.Final</resteasy.client.version>
-        <jclouds.version>2.1.1</jclouds.version>
+        <jclouds.version>2.1.2</jclouds.version>
         <javax.ws.rs.version>2.1.1</javax.ws.rs.version>
-        <jclouds-ceph.version>2.1.1</jclouds-ceph.version>
         <openstack4j.version>3.1.0</openstack4j.version>
         <awssdk.v1.version>1.11.488</awssdk.v1.version>
         <thaiopensource.version>20091111</thaiopensource.version>
@@ -865,7 +864,12 @@
             <dependency>
                 <groupId>org.apache.jclouds.api</groupId>
                 <artifactId>openstack-swift</artifactId>
-                <version>${jclouds-ceph.version}</version>
+                <version>${jclouds.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>${javax.ws.rs.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.pacesys</groupId>
@@ -883,7 +887,7 @@
                 <artifactId>openstack4j-httpclient</artifactId>
                 <version>${openstack4j.version}</version>
             </dependency>
-	            
+
             <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-s3</artifactId>
