Bug 5796 : Add workspace API for retrieving object at a specific offset & size
(cherry picked from commit 040e7113c394c495111010567f7f13b43ec4f7ad)

--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -330,6 +330,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        maxDistributionInMemoryBufferSize: 100000
+        maxDistributionOnDiskBufferSize: 100000000
     security_internal:
         vitam_component: security-internal
         host: "security-internal.service.{{ consul_domain }}"
