--- a/sources/workspace/workspace-rest/pom.xml
+++ b/sources/workspace/workspace-rest/pom.xml
@@ -41,7 +41,12 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 
