Various fixes for CGI/minarm on hardened OS

--- a/deb/vitam-product/vitam-elasticsearch-cerebro/lib/systemd/system/vitam-elasticsearch-cerebro.service
+++ b/deb/vitam-product/vitam-elasticsearch-cerebro/lib/systemd/system/vitam-elasticsearch-cerebro.service
@@ -6,11 +6,9 @@ After=network-online.target
 
 [Service]
 WorkingDirectory=/vitam/app/cerebro
-
 User=vitam
 Group=vitam
-
-
+EnvironmentFile=-/vitam/conf/cerebro/sysconfig/cerebro
 ExecStart=/vitam/app/cerebro/bin/cerebro -Dconfig.file=/vitam/conf/cerebro/application.conf
 
 StandardOutput=journal
