--- a/deployment/ansible-vitam/roles/mongos/vars/main.yml
+++ b/deployment/ansible-vitam/roles/mongos/vars/main.yml
@@ -1,4 +1,4 @@
 ---
-
+mongo_tmp_path:  '{{ vitam_defaults.folder.root_path }}/tmp/mongos'
 mongo_config_path:  '{{ vitam_defaults.folder.root_path }}/conf/mongos'
 mongo_db_path:      '{{ vitam_defaults.folder.root_path }}/data/mongos/db'
